<?xml version="1.0"?>
<package>
  <name>stdr_samples</name>
  <version>0.2.0</version>
  <description>Provides sample codes to demonstrate STDR simulator functionalities.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>GPLv3</license>

  <url type="website">http://stdr-simulator-ros-pkg.github.io</url>
  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
  
</package>
