<?xml version="1.0"?>
<package format="2">
  <name>stdr_samples</name>
  <version>0.3.1</version>
  <description>Provides sample codes to demonstrate STDR simulator functionalities.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>GPLv3</license>

  <url type="website">http://stdr-simulator-ros-pkg.github.io</url>
  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>stdr_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>

</package>
