<?xml version="1.0"?>
<package>
  <name>stdr_server</name>
  <version>0.0.1</version>
  <description>The stdr_server package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>
  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>
  <maintainer email="aris.thallas@gmail.com">Aris Thallas</maintainer>

  <license>GPL v3.0</license>

  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>map_server</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nodelet</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
