<?xml version="1.0"?>
<package>
  <name>stdr_server</name>
  <version>0.0.1</version>
  <description>The stdr_server package</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>GPLv3</license>

  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Chris Zalidis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>map_server</build_depend>
  
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>nodelet</run_depend>


  <export>
  </export>
</package>
