<?xml version="1.0"?>
<package>
  <name>stdr_simulator</name> <!-- This is a meta package! -->
  <version>0.0.1</version>
  <description>A simple, flexible and scalable 2D robot simulator.</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>
  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>
  <maintainer email="aris.thallas@gmail.com">Aris Thallas</maintainer>

  <license>GPLv3</license>

  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
