<?xml version="1.0"?>
<package>
  <name>stdr_simulator</name> <!-- This is a meta package! -->
  <version>0.1.2</version>
  <description>A simple, flexible and scalable 2D multi-robot simulator.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>GPLv3</license>

  <url type="website">http://stdr-simulator-ros-pkg.github.io</url>
  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>stdr_msgs</run_depend>
  <run_depend>stdr_server</run_depend>
  <run_depend>stdr_robot</run_depend>
  <run_depend>stdr_gui</run_depend>
  <run_depend>stdr_launchers</run_depend>
  <run_depend>stdr_resources</run_depend>
  <run_depend>stdr_samples</run_depend>
  <run_depend>stdr_parser</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
