<?xml version="1.0"?>
<package format="2">
  <name>stdr_simulator</name> <!-- This is a meta package! -->
  <version>0.3.1</version>
  <description>A simple, flexible and scalable 2D multi-robot simulator.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>GPLv3</license>

  <url type="website">http://stdr-simulator-ros-pkg.github.io</url>
  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>stdr_msgs</exec_depend>
  <exec_depend>stdr_server</exec_depend>
  <exec_depend>stdr_robot</exec_depend>
  <exec_depend>stdr_gui</exec_depend>
  <exec_depend>stdr_launchers</exec_depend>
  <exec_depend>stdr_resources</exec_depend>
  <exec_depend>stdr_samples</exec_depend>
  <exec_depend>stdr_parser</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
