<?xml version="1.0"?>
<package>
  <name>stdr_xml_parser</name>
  <version>0.0.1</version>
  <description>The stdr_parser package</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>
  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>
  <maintainer email="aris.thallas@gmail.com">Aris Thallas</maintainer>

  <license>GPL v3.0</license>

  <url type="bugtracker">https://github.com/stdr-simulator-ros-pkg/stdr_simulator/issues</url>
  <url type="repository">https://github.com/stdr-simulator-ros-pkg/stdr_simulator</url>

  <author>Manos Tsardoulias, Chris Zalidis, Aris Thallas</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>tinyxml</run_depend>

  <export>
  </export>
</package>
